exports[`size should pass parameters to the values of height and width 1`] = `
Object {
  "height": "300px",
  "width": "250px",
}
`;

exports[`size should pass parameters to the values of height and width when passed integers 1`] = `
Object {
  "height": 300,
  "width": 250,
}
`;

exports[`size should set height and width to the same value when only one parameter is passed 1`] = `
Object {
  "height": "300px",
  "width": "300px",
}
`;
